php-app-helm-chat/php-app-chart/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  labels:
    app: php-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
      tier: frontend
  template:
    metadata:
      labels:
        app: php-app
        tier: frontend
    spec:
      containers:
      - name: php-app-frontend
        image: chandankumar10942/php-server1:v1

        ports:
        - containerPort: 80
