php-app-helm-chat/php-app-chart/templates/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: php-app

  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
