php-app-helm-chat/php-app-chart/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tms
spec:
  rules:
    - host: tms.example.com 
      http:
        paths:
          - path: / 
            pathType: Prefix 
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
